crates/cli/tests/snapshots/run_test__output_styles__buffer.snap
---
source: crates/cli/tests/run_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ outputStyles:buffer
stdout
▪▪▪▪ outputStyles:buffer (100ms)
▪▪▪▪ outputStyles:bufferPrimary (no op)

Tasks: 2 completed
 Time: 100ms

stderr
