crates/cli/tests/snapshots/run_test__output_styles__buffer_on_failure_when_failure.snap
---
source: crates/cli/tests/run_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ outputStyles:bufferFailureFail
▪▪▪▪ outputStyles:bufferFailureFail (100ms)
stdout

stderr

Error:   × Process node failed with a 1 exit code.



