crates/cli/tests/snapshots/run_test__output_styles__buffer_on_failure_when_success.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 749
expression: get_assert_output(&assert)
---
▪▪▪▪ npm install
▪▪▪▪ outputStyles:bufferFailurePass
▪▪▪▪ outputStyles:bufferFailurePass (100ms)
▪▪▪▪ outputStyles:bufferFailurePassPrimary (no op)

Tasks: 2 completed
 Time: 100ms



