crates/cli/tests/snapshots/run_test__output_styles__hash.snap
---
source: crates/cli/tests/run_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ outputStyles:hash
▪▪▪▪ outputStyles:hash (100ms)
▪▪▪▪ outputStyles:hashPrimary (no op)

Tasks: 2 completed
 Time: 100ms

821d4742c622835174fe2b8646f9ec9aaf702f9522965d637c455084a07fd2d3
