crates/cli/tests/snapshots/run_test__output_styles__stream.snap
---
source: crates/cli/tests/run_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ outputStyles:stream
outputStyles:stream | stdout
▪▪▪▪ outputStyles:stream (100ms)
▪▪▪▪ outputStyles:streamPrimary (no op)

Tasks: 2 completed
 Time: 100ms

outputStyles:stream | stderr
